Added terraform file and an installation script